Change flex display to stretch and corrected height prop

--- a/css/main.css
+++ b/css/main.css
@@ -109,9 +109,13 @@ body {
   height: 100%;
 }
 
+header {
+    margin: auto;
+}
+
 .flex-wrapper {
   /*add display:flex and set justify-content to space-between*/
-  align-items: center;
+  align-items: stretch;
   border: rgb(8, 0, 5) solid 10px;
   display: flex;
   font-weight: 515;
@@ -120,13 +124,12 @@ body {
 
 .flex-item {
   align-items: center;
-  border: black solid 6px;
+  border: black solid 2px;
   color: #fff;
   display: flex;
   line-height: 1.5em;
   font-size: 1.6em;
   background-color: #f16059;
-  height: 100%;
   justify-content: space-between;
   
 }
@@ -231,6 +234,7 @@ Come back and fix later  **/
         background: pink;
     }
     .flex-wrapper, .flex-item {
+        align-items: stretch;
         flex-flow: column wrap;
         width: 100%;
     }
@@ -246,9 +250,22 @@ Come back and fix later  **/
     }
 
     .flex-wrapper .flex-item{
-        align-items: stretch;
+        align-items: center;
+    }
+
+    .flex-item {
+        margin: 4px;
+    }
+
+    #div-1 #div-3 {
+        padding: 0 3px;
+    }
+
+    #div-2 {
+        padding: 0 8px;
     }
 }
+
 
 
 
